src/syntax/snapshots/joky__syntax__parser_snapshots__tests__snapshot_arithmetic_expression.snap
---
source: src/syntax/parser_snapshots.rs
assertion_line: 24
expression: format_ast(source)
---
Program {
    imports: [],
    constants: [],
    traits: [],
    impls: [],
    structs: [],
    classes: [],
    enums: [],
    effects: [],
    effect_aliases: [],
    intrinsic_types: [],
    functions: [
        Function {
            name: "main",
            foreign: None,
            receiver_mode: None,
            visibility: Private,
            type_parameters: [],
            parameters: [],
            return_type: None,
            effect_names: [],
            where_predicates: [],
            body: Expr {
                id: NodeId(
                    5,
                ),
                kind: Block(
                    [
                        Expr {
                            id: NodeId(
                                4,
                            ),
                            kind: Binary {
                                op: Add,
                                left: Expr {
                                    id: NodeId(
                                        0,
                                    ),
                                    kind: Integer(
                                        1,
                                    ),
                                    span: Span {
                                        start: 12,
                                        end: 13,
                                    },
                                },
                                right: Expr {
                                    id: NodeId(
                                        3,
                                    ),
                                    kind: Binary {
                                        op: Multiply,
                                        left: Expr {
                                            id: NodeId(
                                                1,
                                            ),
                                            kind: Integer(
                                                2,
                                            ),
                                            span: Span {
                                                start: 16,
                                                end: 17,
                                            },
                                        },
                                        right: Expr {
                                            id: NodeId(
                                                2,
                                            ),
                                            kind: Integer(
                                                3,
                                            ),
                                            span: Span {
                                                start: 20,
                                                end: 21,
                                            },
                                        },
                                    },
                                    span: Span {
                                        start: 16,
                                        end: 21,
                                    },
                                },
                            },
                            span: Span {
                                start: 12,
                                end: 21,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 10,
                    end: 23,
                },
            },
            span: Span {
                start: 0,
                end: 23,
            },
        },
    ],
}
