src/syntax/snapshots/joky__syntax__parser_snapshots__tests__snapshot_error_empty_program.snap
---
source: src/syntax/parser_snapshots.rs
expression: format_ast(source)
---
Error: program is empty
