src/syntax/snapshots/joky__syntax__parser_snapshots__tests__snapshot_if_expression.snap
---
source: src/syntax/parser_snapshots.rs
assertion_line: 48
expression: format_ast(source)
---
Program {
    imports: [],
    constants: [],
    traits: [],
    impls: [],
    structs: [],
    classes: [],
    enums: [],
    effects: [],
    intrinsic_types: [],
    functions: [
        Function {
            name: "main",
            foreign: None,
            receiver_mode: None,
            visibility: Private,
            type_parameters: [],
            parameters: [],
            return_type: None,
            effect_names: [],
            where_predicates: [],
            body: Expr {
                id: NodeId(
                    4,
                ),
                kind: Block(
                    [
                        Expr {
                            id: NodeId(
                                3,
                            ),
                            kind: If {
                                condition: Expr {
                                    id: NodeId(
                                        0,
                                    ),
                                    kind: Boolean(
                                        true,
                                    ),
                                    span: Span {
                                        start: 15,
                                        end: 19,
                                    },
                                },
                                then_branch: Expr {
                                    id: NodeId(
                                        1,
                                    ),
                                    kind: Integer(
                                        1,
                                    ),
                                    span: Span {
                                        start: 20,
                                        end: 21,
                                    },
                                },
                                else_branch: Expr {
                                    id: NodeId(
                                        2,
                                    ),
                                    kind: Integer(
                                        2,
                                    ),
                                    span: Span {
                                        start: 27,
                                        end: 28,
                                    },
                                },
                            },
                            span: Span {
                                start: 12,
                                end: 28,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 10,
                    end: 30,
                },
            },
            span: Span {
                start: 0,
                end: 30,
            },
        },
    ],
}
