src/syntax/snapshots/joky__syntax__parser_snapshots__tests__snapshot_let_binding.snap
---
source: src/syntax/parser_snapshots.rs
assertion_line: 36
expression: format_ast(source)
---
Program {
    imports: [],
    constants: [],
    traits: [],
    impls: [],
    structs: [],
    classes: [],
    enums: [],
    effects: [],
    effect_aliases: [],
    intrinsic_types: [],
    functions: [
        Function {
            name: "main",
            foreign: None,
            receiver_mode: None,
            visibility: Private,
            type_parameters: [],
            parameters: [],
            return_type: None,
            effect_names: [],
            where_predicates: [],
            body: Expr {
                id: NodeId(
                    3,
                ),
                kind: Block(
                    [
                        Expr {
                            id: NodeId(
                                1,
                            ),
                            kind: Let {
                                name: "x",
                                mutable: false,
                                annotation: None,
                                value: Expr {
                                    id: NodeId(
                                        0,
                                    ),
                                    kind: Integer(
                                        42,
                                    ),
                                    span: Span {
                                        start: 20,
                                        end: 22,
                                    },
                                },
                            },
                            span: Span {
                                start: 12,
                                end: 22,
                            },
                        },
                        Expr {
                            id: NodeId(
                                2,
                            ),
                            kind: Name(
                                "x",
                            ),
                            span: Span {
                                start: 24,
                                end: 25,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 10,
                    end: 27,
                },
            },
            span: Span {
                start: 0,
                end: 27,
            },
        },
    ],
}
